tests/baselines/reference/reuseInnerModuleMember.errors.txt
reuseInnerModuleMember_0.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
reuseInnerModuleMember_1.ts(2,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
reuseInnerModuleMember_1.ts(7,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== reuseInnerModuleMember_1.ts (2 errors) ====
    ///<reference path='reuseInnerModuleMember_0.ts'/>
    declare module bar {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface alpha { }
    }
    
    import f = require('./reuseInnerModuleMember_0');
    module bar {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        var x: alpha;
    }
    
==== reuseInnerModuleMember_0.ts (1 errors) ====
    export module M { }
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    